--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon app.js --ignore ./session"
   },
   "repository": {
     "type": "git",
@@ -18,14 +19,21 @@
   },
   "homepage": "https://github.com/Scream199109/QuizGame#readme",
   "dependencies": {
+    "bcrypt": "^5.0.1",
+    "cookie-parser": "^1.4.6",
+    "cookieparser": "^0.1.0",
+    "cors": "^2.8.5",
     "express": "^4.17.3",
+    "express-session": "^1.17.2",
     "hbs": "^4.2.0",
+    "http-errors": "^2.0.0",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.15",
     "pg": "^8.7.3",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.17.0",
-    "sequelize-cli": "^6.4.1"
+    "sequelize-cli": "^6.4.1",
+    "session-file-store": "^1.5.0"
   },
   "devDependencies": {
     "eslint": "^8.12.0",
